--- a/index-lang2.html
+++ b/index-lang2.html
@@ -1,6 +1,9 @@
 ---
 # Feel free to add content and custom Front Matter to this file.
 # To modify the layout, see https://jekyllrb.com/docs/themes/#overriding-theme-defaults
-
-layout: home
+lang: lang-2
+permalink: /lang-2/
+layout: default
 ---
+<h1>Index site (lang 2)</h1>
+<p>Hello World!</p>
