--- a/collection.html
+++ b/collection.html
@@ -8,7 +8,7 @@ lang: def
 {% for thing in site.collection %}
   {% if thing.lang == "def" %}
     <h2>
-      <a href="{{ thing.url }}">
+      <a href="{{ site.baseurl }}{{ thing.url }}">
         {{ thing.title }}
       </a>
     </h2>
