--- a/posts-lang2.html
+++ b/posts-lang2.html
@@ -10,7 +10,7 @@ lang: lang-2
     {% for post in site.posts %}
       {% if post.lang == "lang-2" %}
         <li>
-          <a href="{{ post.url }}">{{ post.title }}</a>
+          <a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a>
         </li>
       {% endif %}
     {% endfor %}
