--- a/posts.html
+++ b/posts.html
@@ -10,7 +10,7 @@ lang: def
     {% for post in site.posts %}
       {% if post.lang == "def" %}
         <li>
-          <a href="{{ post.url }}">{{ post.title }}</a>
+          <a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a>
         </li>
       {% endif %}
     {% endfor %}
