--- a/index-en.html
+++ b/index-en.html
@@ -1,9 +1,9 @@
 ---
 # Feel free to add content and custom Front Matter to this file.
 # To modify the layout, see https://jekyllrb.com/docs/themes/#overriding-theme-defaults
-lang: lang-2
-permalink: /lang-2/
+lang: en
+permalink: /en/
 layout: default
 ---
-<h1>Index site (lang 2)</h1>
+<h1>Index site (en)</h1>
 <p>Hello World!</p>
