--- a/posts-en.html
+++ b/posts-en.html
@@ -1,14 +1,14 @@
 ---
 title: Posts
-permalink: /posts/
+permalink: /en/posts/
 layout: default
-lang: is
+lang: en
 ---
 
 
 <ul>
     {% for post in site.posts %}
-      {% if post.lang == "is" %}
+      {% if post.lang == "en" %}
         <li>
           <a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }} - {{ post.date }}</a>
         </li>
