--- a/whippets.html
+++ b/whippets.html
@@ -1,15 +1,17 @@
 ---
-title: Collection
+title: Whippets
 layout: default
-lang: lang-2
+permalink: /whippets
+lang: is
 ---
 
 
-{% for thing in site.collection %}
-  {% if thing.lang == "lang-2" %}
+{% for thing in site.whippets %}
+  {% if thing.lang == "is" %}
     <h2>
       <a href="{{ site.baseurl }}{{ thing.url }}">
         {{ thing.title }}
+        <br><img src="{{ thing.img }}">
       </a>
     </h2>
   {% endif %}
